[gd_scene load_steps=4 format=3 uid="uid://dhhpfvvu4mn3b"]

[ext_resource type="Texture2D" uid="uid://bhd68nmc52vku" path="res://Assets/bg_no_clouds.png" id="1_yabug"]
[ext_resource type="PackedScene" uid="uid://coq0koiy0qjcs" path="res://InfiniteBackGroundTest/camera_test.tscn" id="2_485yp"]
[ext_resource type="Script" path="res://InfiniteBackGroundTest/obstacle_spawner.gd" id="3_m4tsr"]

[node name="Node2D" type="Node2D"]
metadata/_edit_horizontal_guides_ = [1084.0]

[node name="InfiniteBackGroundTest" type="ParallaxBackground" parent="."]
metadata/_edit_vertical_guides_ = [965.0, -773.0]
metadata/_edit_horizontal_guides_ = [1076.0, 281.0]

[node name="ParallaxLayer" type="ParallaxLayer" parent="InfiniteBackGroundTest"]
motion_mirroring = Vector2(1919.98, 0)

[node name="Sprite2D" type="Sprite2D" parent="InfiniteBackGroundTest/ParallaxLayer"]
position = Vector2(961, 442)
texture = ExtResource("1_yabug")

[node name="CameraTest" parent="." instance=ExtResource("2_485yp")]
position = Vector2(9, 539)

[node name="RandomSpawn" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ObstacleSpawner" type="Node2D" parent="."]
script = ExtResource("3_m4tsr")

[connection signal="timeout" from="RandomSpawn" to="ObstacleSpawner" method="_on_random_spawn_timeout"]
